--- a/ForexStrategyBuilder.csproj
+++ b/ForexStrategyBuilder.csproj
@@ -44,9 +44,11 @@
     <Compile Include="Indicators\Custom\AdaptiveMovingAverage.cs" />
     <Compile Include="Indicators\Custom\AverageHighLowBand.cs" />
     <Compile Include="Indicators\Custom\TripleMovingAverage.cs" />
+    <Compile Include="Indicators\Custom\TwoLinesCrossover.cs" />
     <Compile Include="Indicators\Indicator.cs" />
     <Compile Include="Indicators\IndicatorBaseCalc.cs" />
     <Compile Include="Indicators\MainChartBandsIndicator.cs" />
+    <Compile Include="Indicators\MainChartCrossingLinesIndicator.cs" />
     <Compile Include="Indicators\MainChartSingleLineIndicator.cs" />
     <Compile Include="Indicators\Store\AcceleratorOscillator.cs" />
     <Compile Include="Indicators\Store\AccountPercentStop.cs" />
