Alligator Jaw added to project.

--- a/ForexStrategyBuilder.csproj
+++ b/ForexStrategyBuilder.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Indicators\Custom\AdaptiveMovingAverage.cs" />
+    <Compile Include="Indicators\Custom\AlligatorJaw.cs" />
     <Compile Include="Indicators\Custom\AverageHighLowBand.cs" />
     <Compile Include="Indicators\Custom\TripleMovingAverage.cs" />
     <Compile Include="Indicators\Custom\TwoLinesCrossover.cs" />
