Added "Price MA Relation" indicator.

--- a/ForexStrategyBuilder.csproj
+++ b/ForexStrategyBuilder.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Indicators\Custom\AdaptiveMovingAverage.cs" />
     <Compile Include="Indicators\Custom\AlligatorJaw.cs" />
     <Compile Include="Indicators\Custom\AverageHighLowBand.cs" />
+    <Compile Include="Indicators\Custom\PriceMARelation.cs" />
     <Compile Include="Indicators\Custom\CandleColor.cs" />
     <Compile Include="Indicators\Custom\TripleMovingAverage.cs" />
     <Compile Include="Indicators\Custom\TwoLinesCrossover.cs" />
