Added Rising Volume indicator.

--- a/ForexStrategyBuilder.csproj
+++ b/ForexStrategyBuilder.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Indicators\Custom\OpenCloseGap.cs" />
     <Compile Include="Indicators\Custom\PriceMARelation.cs" />
     <Compile Include="Indicators\Custom\CandleColor.cs" />
+    <Compile Include="Indicators\Custom\RisingVolume.cs" />
     <Compile Include="Indicators\Custom\RSIConvergenceDivergence.cs" />
     <Compile Include="Indicators\Custom\TimePriceChannel.cs" />
     <Compile Include="Indicators\Indicator.cs" />
