--- a/ForexStrategyBuilder.csproj
+++ b/ForexStrategyBuilder.csproj
@@ -193,9 +193,12 @@
     <Compile Include="Infrastructure\Interfaces\ITranslationManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DataJson.cs" />
     <Compile Include="Services\DataLoader.cs" />
     <Compile Include="Services\DataParser.cs" />
     <Compile Include="Services\DocGenerator.cs" />
+    <Compile Include="Services\IndicatorToTs.cs" />
+    <Compile Include="Services\IndicatorsJson.cs" />
     <Compile Include="Services\IndicatorTester.cs" />
     <Compile Include="Services\Repository.cs" />
   </ItemGroup>
